<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <ImageView
        android:id="@+id/mainMenuBackground"
        android:contentDescription="@null"
        android:src="@drawable/title_background"
        android:adjustViewBounds="true"
        android:gravity="center_vertical"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    />
    <ImageView
        android:id="@+id/mainMenuTitle"
        android:contentDescription="@string/main_menu_title"
        android:src="@drawable/main_menu_title"
        android:adjustViewBounds="true"
        android:layout_width="336dp"
        android:layout_height="153dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:id="@+id/mainSectionMenu"
        >
        <ImageButton
            android:id="@+id/startButton"
            android:contentDescription="@string/start_button"
            android:src="@drawable/title_button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
        />
        <ImageButton
            android:id="@+id/continueButton"
            android:contentDescription="@string/continue_button"
            android:src="@drawable/title_button_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:clickable="true"
        />
        <ImageButton
            android:id="@+id/settingsButton"
            android:contentDescription="@string/settings_button"
            android:src="@drawable/title_button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:clickable="true"
        />

<!--
        <ImageButton
            android:id="@+id/extrasButton"
            android:contentDescription="@string/extras_button"
            android:src="@drawable/title_button_extras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:clickable="true"
        />
-->

<!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:background="#99000000"
            android:textColor= "#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:text="@string/whats_new_ticker"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:textSize="14sp"
            android:fadingEdge="horizontal"
            android:fadingEdgeLength="5dp"
            android:focusable="false"
            android:id="@+id/ticker"
            android:singleLine="true"
            android:layout_gravity="bottom|left"
        />
-->
    </LinearLayout>

<!-- needed ?
    <ImageView
        android:id="@+id/extrasNew"
        android:src="@drawable/title_new"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingLeft="280dp"
        android:paddingTop="160dp"
        android:visibility="invisible"
    />
-->
</FrameLayout>
