<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <ImageView
        android:id="@+id/diffMenuBackground"
        android:src="@drawable/diff_background"
        android:adjustViewBounds="true"
        android:gravity="center_vertical"
        android:scaleType="fitXY"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
    />
    <LinearLayout
        android:background="@drawable/custom_toast_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="10dp"
        >
        <ImageButton
            android:id="@+id/easyButton"
            android:src="@drawable/diff_button_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor= "#FFFFFF"
            android:textSize="14sp"
            android:focusable="false"
            android:layout_gravity="center_horizontal"
            android:text="@string/diff_easy_description"
            android:id="@+id/easyText"
        />
        <ImageButton
            android:id="@+id/normalButton"
            android:src="@drawable/diff_button_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:layout_marginTop="15dp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor= "#FFFFFF"
            android:textSize="14sp"
            android:focusable="false"
            android:layout_gravity="center_horizontal"
            android:text="@string/diff_normal_description"
            android:id="@+id/normalText"
        />
        <ImageButton
            android:id="@+id/hardButton"
            android:src="@drawable/diff_button_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@null"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:layout_marginTop="15dp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor= "#FFFFFF"
            android:textSize="14sp"
            android:focusable="false"
            android:layout_gravity="center_horizontal"
            android:text="@string/diff_hard_description"
            android:id="@+id/hardText"
        />
    </LinearLayout>
</FrameLayout>
